2011-10-04  Gavin Barraclough  <barraclough@apple.com>

        Make Object.prototype getter/setter methods match ES5 behaviour
        https://bugs.webkit.org/show_bug.cgi?id=69393

        Reviewed by Sam Weinig.

        The rest of Object.prototype no longer substitute Null/Undefined with the global object,
        this is old ES3 behaviour. Remove it here too.

        * runtime/ObjectPrototype.cpp:
        (JSC::objectProtoFuncDefineGetter):
        (JSC::objectProtoFuncDefineSetter):
        (JSC::objectProtoFuncLookupGetter):
        (JSC::objectProtoFuncLookupSetter):

2011-10-05  Patrick Gansterer  <paroga@webkit.org>

        Get rid of posixThread in MachineStackMarker::Thread
        https://bugs.webkit.org/show_bug.cgi?id=54836

        Reviewed by Oliver Hunt.

        * heap/MachineStackMarker.cpp:
        (JSC::MachineThreads::Thread::Thread):
        (JSC::getCurrentPlatformThread):
        (JSC::equalThread):
        (JSC::MachineThreads::addCurrentThread):
        (JSC::MachineThreads::removeCurrentThread):
        (JSC::MachineThreads::gatherConservativeRoots):

2011-10-04  Geoffrey Garen  <ggaren@apple.com>

        Removed JSValue::toJSNumber
        https://bugs.webkit.org/show_bug.cgi?id=69399

        No perf. change.

        toJSNumber() used to provide an implicit fast path for immediate numbers,
        but those fast paths are all explicit now, so it's just cruft.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):
        * jit/JITStubs.cpp:
        (JSC::DEFINE_STUB_FUNCTION):
        * runtime/JSValue.h:
        * runtime/JSValueInlineMethods.h:

2011-10-05  Gavin Peters  <gavinp@chromium.org>

        REGRESSION (r96595): WTFReportBacktrace listed as the top frame in all assertion backtraces
        https://bugs.webkit.org/show_bug.cgi?id=69424

        Skip an extra frame in WTFReportBacktrace.  As well, I now don't count skipped frames in maxFrames,