@@ -1,3 +1,14 @@
+2011-10-05  Anders Carlsson  <andersca@apple.com>
+
+        Use std::reverse_iterator for ListHashSet reverse iterators
+        https://bugs.webkit.org/show_bug.cgi?id=69446
+
+        Reviewed by Darin Adler.
+
+        * wtf/ListHashSet.h:
+        Use the std::reverse_iterator iterator adaptor for the ListHashSet reverse iterators
+        and get rid of the ListHashSetReverseIterator and ListHashSetConstReverseIterator classes.
+
 2011-10-04  Gavin Barraclough  <barraclough@apple.com>
 
         Make Object.prototype getter/setter methods match ES5 behaviour
